--- a/templates/home.html
+++ b/templates/home.html
@@ -2,9 +2,43 @@
 <html>
   <head>
     <title>Jovian careers</title>
+    <style>
+      h1{
+        font-size:40px;
+        font-family:Roboto;
+        font-weight:normal;
+        color:rgb(180,180,180);
+       text-align:center;
+      }
+      #banner{
+        height:360px;
+        width:100%;
+        object-fit:cover;
+      }
+      h2{
+        font-size:32px;
+        font-family:Roboto;
+        font-weight:normal;
+        color:rgb(100,100,100);
+       text-align:center;
+      }
+      #container
+      {
+        max-width:720px;
+        margin:0 auto;
+      }
+    </style>
   </head>
   <body>
+    <div id="container">
     <h1>Jovian Careers</h1>
-    <img src=""/>
+    <img id="banner" src="https://jovian-careers-website--poojithadurba.repl.co/static/banner.jpg"/>
+    <h2>About Jovian</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut consequat semper viverra nam libero justo laoreet. At urna condimentum mattis pellentesque id nibh. Praesent semper feugiat nibh sed pulvinar proin gravida. Arcu non odio euismod lacinia. Neque convallis a cras semper auctor neque vitae. Eros donec ac odio tempor orci dapibus ultrices. Eget est lorem ipsum dolor sit amet consectetur adipiscing elit. Tortor vitae purus faucibus ornare. Morbi leo urna molestie at elementum eu facilisis. Nisl condimentum id venenatis a condimentum vitae. Eget nulla facilisi etiam dignissim diam quis enim. Scelerisque fermentum dui faucibus in. Interdum posuere lorem ipsum dolor sit. Donec massa sapien faucibus et molestie ac feugiat.</p>
+<h2>Open Positions</h2>
+      <div style="text-align:center;">
+<button>Contact Us</button>
+      </div>
+    </div>
   </body>
 </html>
